--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  scratcher: ^2.5.0
 
 dev_dependencies:
   flutter_test:
@@ -79,6 +80,8 @@ flutter:
     - assets/summer sale1.jpg
     - assets/watch sale.png
     - assets/shoppingbag.jpg
+    - assets/sc.png
+    - assets/congo.png
 
 
 
